5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1582_1334.log
== SUBMITION (2019-03-24 10:29:38) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11-3)

print("Multiplicacao: ", 2*2*2)

print("Divisao: ", 8/2)

print("Resto: ", 9/1)

print("Potenciacao: ", ...)
-- EXECUTION TIME:
0.111359
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  4.0
Resto:  9.0
Potenciacao:  Ellipsis
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:35:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2

print("Resto: ", 38//3)

print("Potenciacao: ", ...)
-- EXECUTION TIME:
0.13398
-- ERROR:
  File "/home/codebench/codes/1582/1334/main.py", line 9
    print("Resto: ", 38//3)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:35:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 38//3)

print("Potenciacao: ", ...)
-- EXECUTION TIME:
0.13508
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  12
Potenciacao:  Ellipsis
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:36:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 25//3)

print("Potenciacao: ", ...)
-- EXECUTION TIME:
0.132281
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  Ellipsis
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:37:43) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)

print("Resto: ", 32/3)

print("Potenciacao: ", ...)
-- EXECUTION TIME:
0.168491
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  10.666666666666666
Potenciacao:  Ellipsis
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:52:19) 
-- CODE:
print("Adicao: ", 5 + 3)
print(1+7)
print("Subtracao: ", 11 - 3)
print(9-1)
print("Multiplicacao: ", 4*2)
print(4*2)
print("Divisao: ", 16/2)
print(24/3)
print("Resto: ", 158//3)
print()
print("Potenciacao: ", ...)
-- EXECUTION TIME:
0.121953
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
8
Subtracao:  8
8
Multiplicacao:  8
8
Divisao:  8.0
8.0
Resto:  52

Potenciacao:  Ellipsis
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:53:10) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 11 - 3)

print("Multiplicacao: ", 4*2)

print("Divisao: ", 16/2)
print("Resto: ", 158//3)
print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.152067
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  52
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:53:48) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 11 - 3)
print("Multiplicacao: ", 4*2)
print("Divisao: ", 16.0/2)
print("Resto: ", 158//3)
print("Potenciacao: ", 2**3)
-- EXECUTION TIME:
0.210719
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  52
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:55:57) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 11 - 3)
print("Multiplicacao: ", 4 * 2)
print("Divisao: ", 16 / 2)
print("Resto: ", 158 // 3)
print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.162725
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  52
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 10:56:56) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 11 - 3)
print("Multiplicacao: ", 4 * 2)
print("Divisao: ", 16 / 2)
print("Resto: ", 8 // 1)
print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.172503
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 21:43:52) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 11 - 3)
print("Multiplicacao: ", 4 * 2)
print("Divisao: ", 16 / 2)
print("Resto: ", 8 // 1)
print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
